# build-scripts

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  SDL3.tar.xz  action.yml  add-submodule.sh  annotated-types_wasm32.whl  assemble-pkgs.sh  brotli.tar.xz  brotlicffi_wasm32.whl  build-index.py  cffi_wasm32.whl  clang++.sh  clang.sh  cython_wasm32.whl  dateutil_wasm32.whl  generate-index.py  geos.tar.xz  giflib.tar.xz  libffi.tar.xz  libjpeg-turbo.tar.xz  libpng.tar.xz  libtiff.tar.xz  libuv.tar.xz  libwebp.tar.xz  libzbar.tar.xz  lxml_wasm32.whl  mariadb-connector-c.tar.xz  markupsafe_wasm32.whl  msgpack-python_wasm32.whl  mysqlclient_wasm32.whl  numpy-wasix_wasm32.whl  numpy_wasm32.whl  openjpeg.tar.xz  openssl.tar.xz  pandas_wasm32.whl  pandoc.tar.xz  (+29 more)
artifacts/: SDL3.tar.xz  aiohappyeyeballs-2.6.1-py3-none-any.whl  aiohttp-3.13.2-cp313-cp313-wasix_wasm32.whl  aiojobs-1.4.0-py3-none-any.whl  aioresponses-0.7.8-py2.py3-none-any.whl  aiosignal-1.4.0-py3-none-any.whl  annotated_types-0.7.0-py3-none-any.whl  apsw-3.50.4.0-cp313-cp313-wasix_wasm32.whl  arrow.tar.xz  arrow19-0-1.tar.xz  async_timeout-5.0.1-py3-none-any.whl  attrs-25.4.0-py3-none-any.whl  bcrypt-5.0.0-cp313-cp313-wasix_wasm32.whl  brotli.tar.xz  brotlicffi-1.1.0.0-cp313-abi3-wasix_wasm32.whl  bytecode-0.17.0-py3-none-any.whl  bzip2.tar.xz  ca-certificates.tar.xz  caio-0.9.17-py3-none-any.whl  certifi-2025.8.3-py3-none-any.whl  cffi-1.17.1-cp313-cp313-wasix_wasm32.whl  charset_normalizer-3.4.3-cp313-cp313-wasix_wasm32.whl  (+126 more)
resources/bazel-toolchain/: BUILD.bazel  cc_toolchain_config.bzl
(+309 files in other folders)
