# load("@bazel_tools//tools/cpp:cc_toolchain_config_lib.bzl", "cc_toolchain_config")
load(":cc_toolchain_config.bzl", "wasix_cc_toolchain_config")

wasix_cc_toolchain_config(
    name = "wasix_cc_toolchain_config",
    # compiler_path = "wasix-clang",

)

cc_toolchain(
    name = "wasix_cc_toolchain",
    toolchain_identifier = "wasix-toolchain",
    toolchain_config = ":wasix_cc_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    linker_files = ":empty",
    strip_files = ":empty",
    objcopy_files = ":empty",
    dwp_files = ":empty",
)

filegroup(name = "empty")

toolchain(
    name = "wasix_toolchain",
    toolchain = ":wasix_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [],
    target_compatible_with = [],
)